--- a/src/index.html
+++ b/src/index.html
@@ -88,11 +88,11 @@ Airlines ✈ Tailored flight and travel itineraries"
 					<div class="promo_banner">
 						<h1 class="title">
 							Business & First Class Flights
-							<span>from Europe to Dubai (DXB)</span>
+							<span>from Europe to Abu Dhabi (AUH)</span>
 						</h1>
-						<h2 class="sale_description">Save up to 50% <span>on Emirates Flights</span></h2>
+						<h2 class="sale_description">Save up to 50% <span>on Etihad Flights</span></h2>
 						<h3 class="description">
-							Best business & first class deals to Dubai, UAE from anywhere in Europe with Flyer Club.
+							Best business & first class deals to Abu Dhabi, UAE from anywhere in Europe with Flyer Club.
 							Exclusive discounted rates, 24/7 support, personal travel agent & white-glove service.
 						</h3>
 						<div class="partners">
@@ -124,13 +124,13 @@ Airlines ✈ Tailored flight and travel itineraries"
 									alt="location on rounded"
 									class="flyer_club_label_img"
 								/>
-								<span class="flyer_club_label_name">Dubai</span>
+								<span class="flyer_club_label_name">Abu Dhabi</span>
 							</div>
 						</div>
 						<div class="flyer_club_content">
 							<div class="price">
-								<div class="price_total"><span>$2,158</span> Flyer Club</div>
-								<div class="price_retail"><span>$3,974</span> Retail</div>
+								<div class="price_total"><span>$2,014</span> Flyer Club</div>
+								<div class="price_retail"><span>$3,982</span> Retail</div>
 							</div>
 							<div class="discount">
 								<img
@@ -139,8 +139,8 @@ Airlines ✈ Tailored flight and travel itineraries"
 									class="discount_icon"
 								/>
 								<div class="discount_description">
-									<div class="discount_price">Discount 46%</div>
-									<div class="discount_savings">Savings $1,816</div>
+									<div class="discount_price">Discount 50%</div>
+									<div class="discount_savings">Savings $1,968</div>
 								</div>
 							</div>
 						</div>
@@ -195,7 +195,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 			</section>
 			<div class="info_block">
 				<section class="slider" id="Benefits">
-					<h2 class="section_title">Benefits of flying Business Class to Dubai</h2>
+					<h2 class="section_title">Benefits of flying Business Class to Abu Dhabi</h2>
 					<div class="slider_slides">
 						<div class="slider_slides_block">
 							<div class="swiper mySwiper">
@@ -233,11 +233,11 @@ Airlines ✈ Tailored flight and travel itineraries"
 								<div class="slider_menu">
 									<span class="slider_text_item" data-text-slide-to="1"
 										>Delicious menu and exclusive wine list</span
-									><span class="slider_text_item" data-text-slide-to="2">Timeless spa & shower</span
+									><span class="slider_text_item" data-text-slide-to="2">World’s Best Business Class Airline</span
 									><span class="slider_text_item" data-text-slide-to="3"
-										>Endless entertainment on your widescreen</span
+										>Exclusive design by Giorgio Armani and Armani/Casa</span
 									><span class="slider_text_item" data-text-slide-to="4"
-										>Luxury Business Class Lounge</span
+										>Etihad Chauffeur Service</span
 									>
 								</div>
 								<div class="slider_points">
@@ -252,7 +252,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 				</section>
 				<section class="section-about-company">
 					<h2 class="section_title">
-						Why fly to Dubai with <span class="section_title_highlight">Flyer Club?</span>
+						Why fly to Abu Dhabi with <span class="section_title_highlight">Flyer Club?</span>
 					</h2>
 
 					<div class="tabs">
@@ -263,7 +263,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 										<img src="icons/discount.svg" class="filter" alt="discount" title="discount" />
 									</div>
 								</div>
-								<p>Exclusive discounts on Emirates</p>
+								<p>Exclusive discounts on Etihad</p>
 							</div>
 						</div>
 						<div class="tab-btn-2">
@@ -292,7 +292,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 								<div class="text">
 									<div class="block">
 										<p>
-											We have exclusive contracts with Emirates which allow us to provide our
+											We have exclusive contracts with Etihad which allow us to provide our
 											clients with up to 50%/30% discounts on flights.
 										</p>
 										<p>Fly from anywhere in Europe and save $2,000 and more.</p>
@@ -403,7 +403,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 										<img src="icons/discount.svg" class="filter" alt="discount" title="discount" />
 									</div>
 								</div>
-								<p>Exclusive discounts on Emirates</p>
+								<p>Exclusive discounts on Etihad</p>
 							</div>
 						</div>
 						<div class="tab-btn-2">
@@ -421,7 +421,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 								<div class="text">
 									<div class="block">
 										<p>
-											We have exclusive contracts with Emirates which allow us to provide our
+											We have exclusive contracts with Etihad which allow us to provide our
 											clients with up to 50%/30% discounts on flights.
 										</p>
 										<p>Fly from anywhere in Europe and save $2,000 and more.</p>
@@ -560,7 +560,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 										<img src="icons/discount.svg" class="filter" alt="discount" title="discount" />
 									</div>
 								</div>
-								<p>Exclusive discounts on Emirates</p>
+								<p>Exclusive discounts on Etihad</p>
 							</div>
 						</div>
 						<div class="content-1 drop_text">
@@ -568,7 +568,7 @@ Airlines ✈ Tailored flight and travel itineraries"
 								<div class="text">
 									<div class="block">
 										<p>
-											We have exclusive contracts with Emirates which allow us to provide our
+											We have exclusive contracts with Etihad which allow us to provide our
 											clients with up to 50%/30% discounts on flights.
 										</p>
 										<p>Fly from anywhere in Europe and save $2,000 and more.</p>
@@ -780,22 +780,22 @@ Airlines ✈ Tailored flight and travel itineraries"
 						<div class="first_class_flights_block_item">
 							<div class="first_class_flights_block_item_discount">
 								<div class="first_class_flights_block_item_discount_discount">Discount 50%</div>
-								<div class="first_class_flights_block_item_discount_savings">Savings $1,968</div>
+								<div class="first_class_flights_block_item_discount_savings">Savings $1,816</div>
 							</div>
 							<div class="first_class_flights_block_item_image">
-								<img src="img/firstClassFlights/Europe_to_Abu_Dhabi.jpg" alt="Europe to Abu Dhabi" />
+								<img src="img/firstClassFlights/Europe_to_Dubai.jpg" alt="Europe to Dubai" />
 							</div>
 							<div class="first_class_flights_block_item_description">
 								<div class="first_class_flights_block_item_description_country">
-									Europe to Abu Dhabi
+									Europe to Dubai
 								</div>
 								<div class="first_class_flights_block_item_description_price">
-									From <span>$2,146</span> / $3,982
+									From <span>$2,158</span> / $3,974
 								</div>
 								<div class="first_class_flights_block_item_description_total">round-trip, total</div>
 							</div>
 							<div class="first_class_flights_block_item_label">
-								<img src="img/firstClassFlights/etihad.png" alt="Etihad" />
+								<img src="img/firstClassFlights/united.png" alt="united" />
 							</div>
 						</div>
 
