--- a/src/index.html
+++ b/src/index.html
@@ -204,13 +204,13 @@ Airlines ✈ Tailored flight and travel itineraries"
 										<img src="img/benefits/slider_img_1.jpg" alt="coffee" />
 									</div>
 									<div class="swiper-slide">
-										<img src="img/benefits/slider_img_2.jpg" alt="timeless spa & shower" />
+										<img src="img/benefits/slider_img_2.jpg" alt="Business Class Airline" />
 									</div>
 									<div class="swiper-slide">
-										<img src="img/benefits/slider_img_3.jpg" alt="widescreen" />
+										<img src="img/benefits/slider_img_3.jpg" alt="Exclusive design by Giorgio Armani and Armani/Casa" />
 									</div>
 									<div class="swiper-slide">
-										<img src="img/benefits/slider_img_4.jpg" alt="hotel" />
+										<img src="img/benefits/slider_img_4.jpg" alt="Etihad Chauffeur Service" />
 									</div>
 								</div>
 							</div>
